--- a/html_pages/projekt.html
+++ b/html_pages/projekt.html
@@ -26,7 +26,7 @@
 
     <nav>
       <!-- nav-bar med länk till alla sidor -->
-      <div class="nav-item nav-item-home"><a href="/html_pages/index.html"><i class="fa-solid fa-house"></i> Hem</a></div>
+      <div class="nav-item nav-item-home"><a href="/index.html"><i class="fa-solid fa-house"></i> Hem</a></div>
       <div class="nav-item nav-item-cv"><a href="/html_pages/cv.html"><i class="fa-solid fa-file icon"></i> CV</a></div>
       <div class="nav-item nav-item-projects"><a href="/html_pages/projekt.html"><i class="fa-solid fa-pencil icon"></i> Projekt</a></div>
       <div class="nav-item nav-item-contact"><a href="/html_pages/kontakt.html"><i class="fa-solid fa-phone icon"></i> Kontakt</a></div>
