--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
 <!-- referens till eget stylesheet -->
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="css/style.css">
 
   <!-- beskrivning av sidan samt titel -->
   <meta name="description" content="Välkommen till min portfolio! Här kan du läsa en kort beskrivning om mig och se förhandsvisningar av mina projekt som frontendutvecklare.">
