--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
 
     <nav>
       <!-- nav-bar med länk till alla sidor -->
-      <div class="nav-item nav-item-home"><a href="/index.html"><i class="fa-solid fa-house"></i> Hem</a></div>
-      <div class="nav-item nav-item-cv"><a href="/html_pages/cv.html"><i class="fa-solid fa-file icon"></i> CV</a></div>
-      <div class="nav-item nav-item-projects"><a href="/html_pages/projekt.html"><i class="fa-solid fa-pencil icon"></i> Projekt</a></div>
-      <div class="nav-item nav-item-contact"><a href="/html_pages/kontakt.html"><i class="fa-solid fa-phone icon"></i> Kontakt</a></div>
+      <div class="nav-item nav-item-home"><a href="index.html"><i class="fa-solid fa-house"></i> Hem</a></div>
+      <div class="nav-item nav-item-cv"><a href="html_pages/cv.html"><i class="fa-solid fa-file icon"></i> CV</a></div>
+      <div class="nav-item nav-item-projects"><a href="html_pages/projekt.html"><i class="fa-solid fa-pencil icon"></i> Projekt</a></div>
+      <div class="nav-item nav-item-contact"><a href="html_pages/kontakt.html"><i class="fa-solid fa-phone icon"></i> Kontakt</a></div>
     </nav>
 
     <aside class="profile-picture">
         <!-- profilbild -->
-         <img src="/images/profilbild.jpg" alt="profilbild">
+         <img src="images/profilbild.jpg" alt="profilbild">
     </aside>
 
     <section class="profile-description">
@@ -45,20 +45,20 @@
     <div class="projects">
       <!-- förhandsvisningar till projekt -->
       <div class="project-item project-item-1">
-        <img src="/images/login_page.png" alt="login page">
-        <a href="/html_pages/projekt.html">Login Page</a>
+        <img src="images/login_page.png" alt="login page">
+        <a href="html_pages/projekt.html">Login Page</a>
       </div>
       <div class="project-item project-item-2">
-        <img src="/images/rock-paper-scissors.png" alt="sten, sax, påse">
-        <a href="/html_pages/projekt.html">Sten, sax, påse</a>
+        <img src="images/rock-paper-scissors.png" alt="sten, sax, påse">
+        <a href="html_pages/projekt.html">Sten, sax, påse</a>
       </div>
       <div class="project-item project-item-3">
-        <img src="/images/drawing-canvas.png" alt="drawing canvas">
-        <a href="/html_pages/projekt.html">Drawing Canvas</a>
+        <img src="images/drawing-canvas.png" alt="drawing canvas">
+        <a href="html_pages/projekt.html">Drawing Canvas</a>
       </div>
       <div class="project-item project-item-4">
-        <img src="/images/js-kod.jpg" alt="javascript kod">
-        <a href="/html_pages/projekt.html">Kommer snart!</a>
+        <img src="images/js-kod.jpg" alt="javascript kod">
+        <a href="html_pages/projekt.html">Kommer snart!</a>
       </div>
     </div>
 
@@ -66,7 +66,7 @@
       <!-- sociala medier i footer -->
        <div class="footer-item"><a href="https://www.linkedin.com/in/lisa-desousa/" target="_blank"><i class="fa-brands fa-linkedin"></i> LinkedIn</a></div>
        <div class="footer-item"><a href="https://github.com/lisa-desousa" target="_blank"><i class="fa-brands fa-github"></i> GitHub</a></div>
-       <div class="footer-item"><a href="/html_pages/kontakt.html"><i class="fa-solid fa-envelope"></i> Email</a></div>
+       <div class="footer-item"><a href="html_pages/kontakt.html"><i class="fa-solid fa-envelope"></i> Email</a></div>
     </footer>
 
   </main>
