--- a/html_pages/kontakt.html
+++ b/html_pages/kontakt.html
@@ -13,8 +13,8 @@
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
   <!-- referens till egna stylesheet -->
-  <link rel="stylesheet" href="/css/style.css">
-  <link rel="stylesheet" href="/css/style_kontakt.css">
+  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="../css/style_kontakt.css">
 
   <!-- beskrivning av sidan samt titel -->
   <meta name="description" content="Här hittar du kontaktuppgifter till mig.">
@@ -26,16 +26,16 @@
 
     <nav>
       <!-- nav-bar med länk till alla sidor -->
-      <div class="nav-item nav-item-home"><a href="/index.html"><i class="fa-solid fa-house"></i> Hem</a></div>
-      <div class="nav-item nav-item-cv"><a href="/html_pages/cv.html"><i class="fa-solid fa-file icon"></i> CV</a></div>
-      <div class="nav-item nav-item-projects"><a href="/html_pages/projekt.html"><i class="fa-solid fa-pencil icon"></i> Projekt</a></div>
-      <div class="nav-item nav-item-contact"><a href="/html_pages/kontakt.html"><i class="fa-solid fa-phone icon"></i> Kontakt</a></div>
+      <div class="nav-item nav-item-home"><a href="../index.html"><i class="fa-solid fa-house"></i> Hem</a></div>
+      <div class="nav-item nav-item-cv"><a href="cv.html"><i class="fa-solid fa-file icon"></i> CV</a></div>
+      <div class="nav-item nav-item-projects"><a href="projekt.html"><i class="fa-solid fa-pencil icon"></i> Projekt</a></div>
+      <div class="nav-item nav-item-contact"><a href="kontakt.html"><i class="fa-solid fa-phone icon"></i> Kontakt</a></div>
     </nav>
 
     <!-- main content består av ett contact card (motsvarande project-card) -->
     <div class="contact-card">
       <div class="contact-image">
-        <img src="/images/gbg_map.jpg" alt="gothenburg map">
+        <img src="../images/gbg_map.jpg" alt="gothenburg map">
       </div>
       <div class="contact-info">
         <h3><i class="fa-solid fa-location-dot"></i> Göteborg, Sverige</h3>
@@ -48,7 +48,7 @@
       <!-- sociala medier i footer -->
        <div class="footer-item"><a href="https://www.linkedin.com/in/lisa-desousa/" target="_blank"><i class="fa-brands fa-linkedin"></i> LinkedIn</a></div>
        <div class="footer-item"><a href="https://github.com/lisa-desousa" target="_blank"><i class="fa-brands fa-github"></i> GitHub</a></div>
-       <div class="footer-item"><a href="/html_pages/kontakt.html"><i class="fa-solid fa-envelope"></i> Email</a></div>
+       <div class="footer-item"><a href="kontakt.html"><i class="fa-solid fa-envelope"></i> Email</a></div>
     </footer>
 
   </main>
